--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,15 @@ Package: AtelieR
 Type: Package
 Title: A GTK GUI for teaching basic concepts in statistical inference,
         and doing elementary bayesian tests.
-Version: 0.23
+Version: 0.24
 Encoding: UTF-8
-Date: 2012-10-27
-Author: Yvonnick Noel, University of Brittany, France
+Date: 2013-09-22
+Author: Yvonnick Noel
 Maintainer: Yvonnick Noel <yvonnick.noel@uhb.fr>
-Description: A collection of statistical simulation and computation
-        tools with a GTK GUI, to help teach statistical concepts and
-        compute probabilities. Two domains are covered: I.
-        Understanding (Central-Limit Theorem and the Normal
-        Distribution, Distribution of a sample mean, Distribution of a
-        sample variance, Probability calculator for common
-        distributions), and II. Elementary Bayesian Statistics
-        (bayesian inference on proportions, contingency tables, means
-        and variances, with informative and noninformative priors).
+Description: A collection of statistical simulation and computation tools with a GTK GUI, to help teach statistical concepts and compute probabilities. Two domains are covered: I. Understanding (Central-Limit Theorem and the Normal Distribution, Distribution of a sample mean, Distribution of a sample variance, Probability calculator for common distributions), and II. Elementary Bayesian Statistics (bayesian inference on proportions, contingency tables, means and variances, with informative and noninformative priors).
 License: GPL (>= 2)
 Depends: R (>= 2.10), proto, cairoDevice, gWidgetsRGtk2, partitions
-Packaged: 2012-11-21 22:44:45 UTC; noel
+Packaged: 2013-09-22 10:29:34 UTC; noel
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-11-22 09:53:15
+Date/Publication: 2013-09-22 12:47:09
